--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bundle/nerdtree-toggle"]
 	path = bundle/nerdtree-toggle
 	url = git://github.com/jistr/vim-nerdtree-tabs.git
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = git://github.com/kien/ctrlp.vim.git
